--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ input:focus {
     border-color: #6a11cb;
     outline: none;
     box-shadow: 0 0 8px rgba(106, 17, 203, 0.3);
-}
+}SDFADSA
 
 /* ======== Button ======== */
 #togglePassword {
